--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <p>Toward the end of Junior year I joined the union for electrical workers and did that for 4 years. Now I'm currently attending Case Western reserve university for a coding bootcamp.</p>
 
       <ul>
+        <li><p>Email: zrh231@gmail.com</p></li>
         <li><p>Github profile</p><a target="_blank" href="https://github.com/zrh231">https://github.com/zrh231</a></li>
         <li><p>Linkedin</p><a target="_blank" href="https://www.linkedin.com/in/zach-heimann-7694a2172/">https://www.linkedin.com/in/zach-heimann-7694a2172/</a></li>
       </ul>
