--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
       <div class="work">
         <img src="assets/images/neuvo.jpg.png" alt="Word Guess">
 
-        <h3><a target="_blank" href="https://benderb64.github.io/Project1/">Neuvo</a></h3>
+        <h3><a target="_blank" href="https://benderb64.github.io/Nuevo-App/">Neuvo</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/responsive.jpg.png" alt="RPG Game">
