--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,11 @@
 
         <h3><a target="_blank" href="https://zrh231.github.io/TriviaGame/">Trivia Game</a></h3>
       </div>
+      <div class="work">
+        <img src="assets/images/comicverse.png" alt="Trivia Game">
+
+        <h3><a target="_blank" href="https://comicverse.herokuapp.com/">Comicverse</a></h3>
+      </div>
     </section>
   </div>
 
